# redrob-ranker

./: .gitattributes  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  rank.py  requirements-sandbox.txt  requirements.txt  submission.csv  submission.xlsx  submission_metadata.yaml
scripts/: build_deck.py  eda.py  fetch_model.py  fill_h2s_deck.py  honeypot_diag.py  precompute_embeddings.py  profile_pass1.py  review_top.py
src/redrob_ranker/: behavioral.py  config.py  embed.py  honeypot.py  loader.py  reasoning.py  scoring.py  structured.py  textbuild.py
tests/: test_ranker.py
